Coverity analysis defect 120635: Parse warning

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Repl 2021-09-20
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Parse warning

      A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
      /src/mongo/db/server_options.h:194: PW.USELESS_TYPE_QUALIFIER_ON_RETURN_TYPE 120635 type qualifier on return type is meaningless

            Assignee:
            Vishnu Kaushik
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: