SERVER-59764 removed 'const' from the by-value return type